# albatross

./: .gitignore  .travis.yml  README.md  alba.install  alba.opam  index.html  makefile  opam
.github/workflows/: test.yml
docs/: doc_test.md  installation.md  red_black_tree.md  self_interpretation.md
example/: list_sort.al
misc/: albatross-mode.el
ocaml/: _tags  alba.ml  alba2.ml  alba2_common.ml  alba2_common.mli  alba2_generic.ml  alba2_generic.mli  alba_generic.ml  arguments.ml  arguments.mli  assertion_context.ml  assertion_context.mli  assertion_table.ml  assertion_table.mli  ast.ml  boolean1.e  class_context.mli  class_table.ml  class_table.mli  command_line.ml  command_line.mli  constants.ml  constants.mli  container.ml  context.ml  context.mli  context2.ml  eiffelc.ml  expression_ambiguities.md  expressions.md  feature.ml  feature.mli  feature_context.ml  feature_context.mli  feature_table.ml  feature_table.mli  gamma.ml  gamma.mli  general_context.ml  general_context.mli  (+74 more)
ocaml/alba/: Alba.html  Fmlib_overview.html  index.html
ocaml/alba-node/: dune  package.json
ocaml/alba-web/: .gitignore  alba_web.ml  alba_web2.ml  dune  expression.md  index.html  index2.html  style.css
ocaml/alba1/: ast.ml  class_table.ml  context.ml  dune  feature.ml  feature_table.ml  module.ml  proof.ml  proof_context.ml  proof_table.ml  rule_data.ml  term.ml  term_builder.ml  term_table.ml
ocaml/alba2/: alba2.ml  alba2_generic.ml  alba2_generic.mli  dune  gamma.ml  gamma_old.mli  unit_test.ml
ocaml/albalib/: README.md  alba_console.ml  ast.ml  ast.mli  build_context.ml  build_context.mli  build_context2.ml  build_context2.mli  build_expression.ml  build_expression.mli  build_inductive.ml  build_problem.ml  build_problem.mli  builder.md  builder.ml  builder.mli  builder2.ml  builder_new.ml  builder_new.mli  context.ml  context.mli  dune  gamma.ml  gamma.mli  gamma_algo.ml  gamma_algo.mli  gamma_holes.ml  gamma_holes.mli  module.ml  module.mli  operator.ml  operator.mli  parser_lang.ml  parser_lang.mli  printer.ml  printer.mli  repl.ml  repl.mli  signature.ml  signature.mli  (+10 more)
ocaml/core/: alba_core.mli  build.ml  context.ml  context.mli  gamma.ml  gamma.mli  (+26 more)
try/: alba_web.js  test_draft.html
(+1304 files in other folders)
