opam-version: "2.0"
synopsis: "Alba compiler"
maintainer: "Helmut Brandl <helmut.brandl@gmx.net>"
authors: "Helmut Brandl <helmut.brandl@gmx.net>"
homepage: "http://albatross-lang.sourceforge.net"
license: "GPLv2"
dev-repo: "git+https://github.com/hbr/albatross.git"
bug-reports: "http://github.com/hbr/albatross"
build: [
  [make "test_alba"]
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
  # ["sh" "./.copy_docu.sh"] recommended to delete (camelus test)
]
depends: [
  "ocaml" {>= "4.08.0"}
  "linenoise"
  "ocamlfind" {build}
  "menhir" {build}
  "dune" {>= "1.8.0"}
  "odoc" {with-doc}
  "js_of_ocaml" {build}
  "js_of_ocaml-ppx"
  "ppx_inline_test" {with-test}
]
